--- a/solutions/CMakeLists.txt
+++ b/solutions/CMakeLists.txt
@@ -4,3 +4,5 @@ project (AdventOfCode2021)
 add_subdirectory(day_1)
 add_subdirectory(day_2)
 add_subdirectory(day_3)
+add_subdirectory(day_4)
+add_subdirectory(day_5)
